[gd_scene load_steps=3 format=3 uid="uid://djbclhv8eg0q1"]

[ext_resource type="Theme" uid="uid://bpjr67vjqlenx" path="res://themes/UI.tres" id="1_htxb2"]
[ext_resource type="Script" path="res://scripts/ui/SettingsPanel.gd" id="1_jflii"]

[node name="SettingsPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1200.0
offset_bottom = 800.0
script = ExtResource("1_jflii")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_htxb2")
tab_alignment = 1
tabs_visible = false

[node name="Video" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Video/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Video/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="DisplayMode" type="HBoxContainer" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_htxb2")

[node name="DisplayModeLabel" type="Label" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/DisplayMode"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_htxb2")
text = "Display Mode"

[node name="DisplayModeBtn" type="OptionButton" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/DisplayMode"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_htxb2")
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Full screen"
popup/item_1/id = 1

[node name="DisplayFps" type="HBoxContainer" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplayFPSLabel" type="Label" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/DisplayFps"]
layout_mode = 2
size_flags_horizontal = 3
text = "Display FPS"

[node name="DisplayFPSBtn" type="CheckButton" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/DisplayFps"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_htxb2")

[node name="MaxFps" type="HBoxContainer" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MaxFPSLabel" type="Label" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/MaxFps"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max FPS"

[node name="HSlider" type="HBoxContainer" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/MaxFps"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MaxFPSSlider" type="HSlider" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/MaxFps/HSlider"]
custom_minimum_size = Vector2(327, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
min_value = 10.0
max_value = 500.0
value = 144.0
rounded = true

[node name="MaxFPSVal" type="Label" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/MaxFps/HSlider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "144"
horizontal_alignment = 1

[node name="Brightness" type="HBoxContainer" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BrightnessLabel" type="Label" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/Brightness"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brightness"

[node name="HSlider" type="HBoxContainer" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/Brightness"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BrightnessSlider" type="HSlider" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/Brightness/HSlider"]
custom_minimum_size = Vector2(327, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
max_value = 5.0
value = 1.0

[node name="BrightnessVal" type="Label" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/Brightness/HSlider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "1"
horizontal_alignment = 1

[node name="Bloom" type="HBoxContainer" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BloomLabel" type="Label" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/Bloom"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bloom"

[node name="BloomBtn" type="CheckButton" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/Bloom"]
layout_mode = 2
size_flags_horizontal = 2

[node name="VSync" type="HBoxContainer" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/VSync"]
layout_mode = 2
size_flags_horizontal = 3
text = "VSync"

[node name="VSyncBtn" type="CheckButton" parent="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/VSync"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("1_htxb2")

[node name="Audio" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Audio/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="HSlider" type="HBoxContainer" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterVolumeSlider" type="HSlider" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/MasterVolume/HSlider"]
custom_minimum_size = Vector2(327, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = -80.0
max_value = 6.0
value = -10.0

[node name="MasterVolumeVal" type="Label" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/MasterVolume/HSlider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "-10"
horizontal_alignment = 1

[node name="MusicVolume" type="HBoxContainer" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="HSlider" type="HBoxContainer" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolumeSlider" type="HSlider" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/MusicVolume/HSlider"]
custom_minimum_size = Vector2(327, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = -80.0
max_value = 6.0
value = -10.0

[node name="MusicVolumeVal" type="Label" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/MusicVolume/HSlider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "-10"
horizontal_alignment = 1

[node name="SFXVolume" type="HBoxContainer" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume"

[node name="HSlider" type="HBoxContainer" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SFXVolumeSlider" type="HSlider" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/SFXVolume/HSlider"]
custom_minimum_size = Vector2(327, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = -80.0
max_value = 6.0
value = -10.0

[node name="SFXVolumeVal" type="Label" parent="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/SFXVolume/HSlider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "-10"
horizontal_alignment = 1

[node name="Gameplay" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Gameplay/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Gameplay/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="FOV" type="HBoxContainer" parent="TabContainer/Gameplay/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FOVLabel" type="Label" parent="TabContainer/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/FOV"]
layout_mode = 2
size_flags_horizontal = 3
text = "FOV"

[node name="HSlider" type="HBoxContainer" parent="TabContainer/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/FOV"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FOVSlider" type="HSlider" parent="TabContainer/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/FOV/HSlider"]
custom_minimum_size = Vector2(327, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 30.0
value = 70.0

[node name="FOVVal" type="Label" parent="TabContainer/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/FOV/HSlider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "70"
horizontal_alignment = 1

[node name="Language" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[connection signal="item_selected" from="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/DisplayMode/DisplayModeBtn" to="." method="_on_display_mode_btn_item_selected"]
[connection signal="toggled" from="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/DisplayFps/DisplayFPSBtn" to="." method="_on_display_fps_btn_toggled"]
[connection signal="value_changed" from="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/MaxFps/HSlider/MaxFPSSlider" to="." method="_on_max_fps_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/Brightness/HSlider/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="toggled" from="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/Bloom/BloomBtn" to="." method="_on_bloom_btn_toggled"]
[connection signal="toggled" from="TabContainer/Video/ScrollContainer/MarginContainer/VBoxContainer/VSync/VSyncBtn" to="." method="_on_v_sync_btn_toggled"]
[connection signal="value_changed" from="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/MasterVolume/HSlider/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/MusicVolume/HSlider/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/ScrollContainer/MarginContainer/VBoxContainer/SFXVolume/HSlider/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Gameplay/ScrollContainer/MarginContainer/VBoxContainer/FOV/HSlider/FOVSlider" to="." method="_on_fov_slider_value_changed"]
